[gd_scene load_steps=11 format=3 uid="uid://brh05tjg0s3op"]

[ext_resource type="Script" uid="uid://bl2f3opw56fy3" path="res://Scripts/main.gd" id="1_kln2b"]
[ext_resource type="PackedScene" uid="uid://6psj7rrjbwen" path="res://Scenes/Interface/main_menu.tscn" id="1_r150o"]
[ext_resource type="AudioStream" uid="uid://bhgwr7a18eq0n" path="res://Assets/blindHeartLooping.wav" id="2_idj7w"]
[ext_resource type="Texture2D" uid="uid://cxma8rxra2s08" path="res://Assets/hands.png" id="4_rgh2o"]
[ext_resource type="PackedScene" uid="uid://d05veqbhsy2rw" path="res://Scenes/ending.tscn" id="5_pbw6q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pbw6q"]
texture = ExtResource("4_rgh2o")

[sub_resource type="Animation" id="Animation_nn7w8"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3bmuq"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_b26wi"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b26wi"]
_data = {
&"RESET": SubResource("Animation_nn7w8"),
&"fade_in": SubResource("Animation_3bmuq"),
&"fade_out": SubResource("Animation_b26wi")
}

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kln2b")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MainMenu" parent="." instance=ExtResource("1_r150o")]
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_idj7w")

[node name="hold_hand" type="Panel" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_pbw6q")

[node name="fondu" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b26wi")
}

[node name="Ending" parent="." instance=ExtResource("5_pbw6q")]
visible = false
layout_mode = 1

[connection signal="start_game" from="MainMenu" to="." method="intro_Start"]
[connection signal="animation_finished" from="fondu" to="." method="animation_end"]
